--- a/README
+++ b/README
@@ -149,7 +149,7 @@ visit: http://infobot.sourceforge.net/
 
 
 IRC
-	If your looking to hang out on IRC, feel free. We can be found
+	If you're looking to hang out on IRC, feel free. We can be found
 in the #infobot channel on irc.freenode.net. See you there!
 
 
